--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "dyrynda/laravel-cascade-soft-deletes": "^4.3",
         "guzzlehttp/guzzle": "^7.2",
+        "igorescobar/jquery-mask-plugin": "^1.14",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
