--- a/.editorconfig
+++ b/.editorconfig
@@ -16,3 +16,12 @@ indent_size = 2
 
 [docker-compose.yml]
 indent_size = 4
+
+{
+  config: '.editorconfig',
+  version: pkg.version,
+  root: '/',
+  files: undefined,
+  cache: undefined,
+  unset: false,
+};
